# MiTrace

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/config/: default.json  fast.json  preview.json
assets/config/presets/: default.json  fast.json  ultra_preview.json
assets/scenes/: render_all.sh
assets/scenes/cornell_box/: README.md  add_light.py  cornell_box.gltf  render.sh  render_debug.sh  source.blend  source.blend1
assets/scenes/golf/: golf_in_the_end.gltf  render.sh  render_debug.sh  render_preview.sh
assets/scenes/light_creep_test/: light_creep_test.blend1  light_creep_test.gltf  render.sh
assets/scenes/light_type_test/: render.sh
assets/scenes/material_spheres/: README.md  add_sky.py  generate_tex.py  material_spheres.blend1  material_spheres.gltf  material_spheres_raw.gltf  render.sh  render_debug.sh  source.blend  source.blend1
assets/scenes/material_spheres_2/: material_spheres_2.gltf  source.blend  source.blend1
assets/scenes/normal_mapping/: normal_mapping.blend  normal_mapping.gltf
assets/scenes/normal_mapping_test/: render.sh
assets/scenes/offset_scale_test/: offset_scale_test.blend  offset_scale_test.gltf  render.sh
assets/scenes/scripts/: stitch_renders.py
assets/tests/: render_tests.sh
assets/tests/cornell_box_test/: add_light.py  cornell_box.blend  cornell_box.blend1  cornell_box_raw.gltf  render_params.txt
assets/tests/light_creep_test/: light_creep_test.blend  render_params.txt
assets/tests/light_type_test/: light_type_test.blend  light_type_test.blend1  light_type_test.gltf  render_params.txt
assets/tests/material_spheres_test/: material_spheres.gltf  render_params.txt
assets/tests/normal_mapping_test/: normal_mapping_test.blend1  normal_mapping_test.gltf  render_params.txt
assets/tests/offset_scale_test/: offset_scale_test.blend  render_params.txt
doc/gltf/: EXT_lights.md  EXT_sky.md
doc/gltfs/: EXT_light_attributes.md  EXT_sky.md  README.md  TODO.txt
gui/: main.py
scripts/: TODO.txt
scripts/blender/exporter/: README.md
scripts/blender/mitrace_gltf_exporter/: __init__.py
src/: main.cpp
src/CLI/: Config.cpp  Config.hpp
src/Common/: Logger.pch.hpp  ParallelForEach.hpp  STB_Impl.cpp  ScopeTimer.hpp  ThreadSafeVar.hpp
src/Config/: Config.cpp  Config.hpp
src/GUI/: GL_Texture.cpp  GL_Texture.hpp  GUI.cpp  GUI.hpp
src/Loader/: Config.cpp  Config.hpp  GLTF.cpp  GLTF.hpp  GLTF_Loader.cpp  GLTF_Loader.hpp  Types.hpp
src/Platform/: Platform.cpp  Platform.hpp
src/Preview/: Preview.cpp  Preview.hpp
src/Scene/: BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshInstance.cpp  MeshInstance.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp
src/Trace/: BRDF.hpp  Camera.cpp  Camera.hpp  Dispatch.cpp  Dispatch.hpp  GLTF_Loader.cpp  GLTF_Loader.hpp  Image.cpp  Image.hpp  ImageBuffer.hpp  Intersect.cpp  Intersect.hpp  Light.hpp  Material.hpp  MaterialBase.hpp  MaterialGLTF.cpp  MaterialGLTF.hpp  Mesh.cpp  Mesh.hpp  MeshInstance.cpp  MeshInstance.hpp  PBR.hpp  Ray.hpp  RayHit.cpp  RayHit.hpp  RenderBuffer.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  TextureImage.hpp  Trace.cpp  Trace.hpp
src/Tracer/: BRDF.hpp  Camera.cpp  Camera.hpp  Intersect.cpp  Intersect.hpp  Ray.cpp  Ray.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Tracer.cpp  Tracer.hpp
src/Tracer/Backends/Basic/: BRDF.hpp  Camera.cpp  Camera.hpp  Intersect.cpp  Intersect.hpp  LocalStack.hpp  Ray.cpp  Ray.hpp  RayHit.cpp  Tracer.cpp  Tracer.hpp
src/common/: cpu_texture.hpp
src/gui/: gl_texture.cpp  gui.cpp  gui.hpp
src/scene/: scene.hpp
src/trace/: camera.cpp  camera.hpp  rayhit.hpp  trace.cpp  trace.hpp
